cmd/kubernetes/webhook/kodata/validating-defaulting-webhook/500-webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.operator.tekton.dev
  labels:
    name: tekton-operator-webhook
    app: tekton-operator
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: tekton-operator-webhook
      namespace: tekton-operator
  failurePolicy: Fail
  sideEffects: None
  name: validation.webhook.operator.tekton.dev
---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook.operator.tekton.dev
  labels:
    name: tekton-operator-webhook
    app: tekton-operator
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: tekton-operator-webhook
      namespace: tekton-operator
  failurePolicy: Fail
  sideEffects: None
  name: webhook.operator.tekton.dev
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: config.webhook.operator.tekton.dev
  labels:
    name: tekton-operator-webhook
    app: tekton-operator
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: tekton-operator-webhook
      namespace: tekton-operator
  failurePolicy: Fail
  sideEffects: None
  name: config.webhook.operator.tekton.dev
  namespaceSelector:
    matchExpressions:
    - key: operator.tekton.dev/release
      operator: Exists
